Armatured object with shape key causes segfault in BGE #40113

Closed
opened 2014-05-09 18:14:26 +02:00 by Y Car · 12 comments

System Information
Ubuntu 12.04
ATM/ATI

Blender Version
Broken: 2.70a Hash: 1464316
Worked: official 2.70a (stable release)

Short description of error
When an object having shape keys is parented to an armature, launching BGE causes crash (segmentation fault).

Exact steps for others to reproduce the error
Using the attatched file ShapeKeyArmatureCrash.blend :

  • Press "P"

Using default scene :

  • Add an armature next to the cube
  • In the cube properties, set Parent to armature,
  • create a shapekey for the cube
  • Press "P"
**System Information** Ubuntu 12.04 ATM/ATI **Blender Version** Broken: 2.70a Hash: 1464316 Worked: official 2.70a (stable release) **Short description of error** When an object having shape keys is parented to an armature, launching BGE causes crash (segmentation fault). **Exact steps for others to reproduce the error** Using the attatched file [ShapeKeyArmatureCrash.blend](https://archive.blender.org/developer/F88011/ShapeKeyArmatureCrash.blend) : - Press "P" Using default scene : - Add an armature next to the cube - In the cube properties, set Parent to armature, - create a shapekey for the cube - Press "P"
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tchirac

Added subscriber: @tchirac
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

From the default scene I cannot reproduce the error in Ubuntu 12.10. Hash: f93bc76. With the .blend file when I press "P" the cube has no shades, it is a solid white silhouette. I can stop the game engine with the "P" button.

From the default scene I cannot reproduce the error in Ubuntu 12.10. Hash: f93bc76. With the .blend file when I press "P" the cube has no shades, it is a solid white silhouette. I can stop the game engine with the "P" button.
Author

That's strange, I get this not only when I compile myself, but also with build from http://builder.blender.org/download/

Here is what I get in the command prompt :

read blend: ShapeKeyArmatureCrash.blend
Detected GL_ARB_texture_env_combine
Detected GL_ARB_texture_cube_map
Detected GL_ARB_multitexture
Detected GL_ARB_shader_objects
Detected GL_ARB_vertex_shader
Detected GL_ARB_fragment_shader
Detected GL_ARB_vertex_program
Detected GL_ARB_depth_texture
Detected GL_EXT_separate_specular_color
Ignoring Xlib error: error code 174 request code 154
Disabling SWAP INTERVALS extension
Writing: /tmp/ShapeKeyArmatureCrash.crash.txt
Segmentation fault

And here is my /tmp/ShapeKeyArmatureCrash.crash.txt :



   
  

Blender 2.70 (sub 5), Commit date: 2014-05-09 01:56, Hash 1464316

    
  # backtrace
    ./blender() [0xf79b64]
    ./blender() [0xf79dba]
    /lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7f8d1fb614a0]
    ./blender(_ZN16BL_ShapeDeformer16LoadShapeDriversEP13KX_GameObject+0x4a) [0x173a67a]
    ./blender(_Z24BL_ConvertBlenderObjectsP4MainP8KX_SceneP15KX_KetsjiEngine15e_PhysicsEngineP15RAS_IRasterizerP11RAS_ICanvasP24KX_BlenderSceneConverterbb+0xf3f) [0x172a95f]
    ./blender(_ZN24KX_BlenderSceneConverter12ConvertSceneEP8KX_SceneP15RAS_IRasterizerP11RAS_ICanvasb+0xab) [0x172eeab]
    ./blender(StartKetsjiShell+0x8e4) [0x1723234]
    ./blender() [0xffd404]
    ./blender() [0xf957a2]
    ./blender() [0xf96ae2]
    ./blender() [0xf96eb9]
    ./blender() [0xf97316]
    ./blender(wm_event_do_handlers+0x31b) [0xf9778b]
    ./blender(WM_main+0x18) [0xf81378]
    ./blender(main+0x506) [0xf7c3ef]
    /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f8d1fb4c76d]
    ./blender() [0xe96145]

So, is it liked with graphics ?

That's strange, I get this not only when I compile myself, but also with build from http://builder.blender.org/download/ Here is what I get in the command prompt : ``` read blend: ShapeKeyArmatureCrash.blend Detected GL_ARB_texture_env_combine Detected GL_ARB_texture_cube_map Detected GL_ARB_multitexture Detected GL_ARB_shader_objects Detected GL_ARB_vertex_shader Detected GL_ARB_fragment_shader Detected GL_ARB_vertex_program Detected GL_ARB_depth_texture Detected GL_EXT_separate_specular_color Ignoring Xlib error: error code 174 request code 154 Disabling SWAP INTERVALS extension Writing: /tmp/ShapeKeyArmatureCrash.crash.txt Segmentation fault ``` And here is my /tmp/ShapeKeyArmatureCrash.crash.txt : ``` ``` ``` ``` # Blender 2.70 (sub 5), Commit date: 2014-05-09 01:56, Hash 1464316 ``` ``` # backtrace ``` ./blender() [0xf79b64] ./blender() [0xf79dba] /lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7f8d1fb614a0] ./blender(_ZN16BL_ShapeDeformer16LoadShapeDriversEP13KX_GameObject+0x4a) [0x173a67a] ./blender(_Z24BL_ConvertBlenderObjectsP4MainP8KX_SceneP15KX_KetsjiEngine15e_PhysicsEngineP15RAS_IRasterizerP11RAS_ICanvasP24KX_BlenderSceneConverterbb+0xf3f) [0x172a95f] ./blender(_ZN24KX_BlenderSceneConverter12ConvertSceneEP8KX_SceneP15RAS_IRasterizerP11RAS_ICanvasb+0xab) [0x172eeab] ./blender(StartKetsjiShell+0x8e4) [0x1723234] ./blender() [0xffd404] ./blender() [0xf957a2] ./blender() [0xf96ae2] ./blender() [0xf96eb9] ./blender() [0xf97316] ./blender(wm_event_do_handlers+0x31b) [0xf9778b] ./blender(WM_main+0x18) [0xf81378] ./blender(main+0x506) [0xf7c3ef] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f8d1fb4c76d] ./blender() [0xe96145] ``` So, is it liked with graphics ? ```

This issue was referenced by blender/blender-addons-contrib@d5588fd658

This issue was referenced by blender/blender-addons-contrib@d5588fd658dc0c776a33e55ccbfaed1a3974b396

This issue was referenced by d5588fd658

This issue was referenced by d5588fd658dc0c776a33e55ccbfaed1a3974b396

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d5588fd658.

Closed by commit d5588fd658.

Added subscriber: @Moguri

Added subscriber: @Moguri

Next time, please keep the exit key to the default of Esc. I spent more time than I should have trying to debug why the game engine was no longer exiting. :P

Next time, please keep the exit key to the default of Esc. I spent more time than I should have trying to debug why the game engine was no longer exiting. :P
Author

Woop, sorry about that :-s

Bug is fixed, thanks a lot :)

Woop, sorry about that :-s Bug is fixed, thanks a lot :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40113
No description provided.