Fix T40113: Skinned meshes with non-animated shape keys crashes the BGE.